--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,22 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "Backend server for commit project",
+  "main": "src/app.js",
+  "type": "module",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.76.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
