--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0"
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
